# Coleoptera

./: .gitignore  LICENSE  README.md  start.sh
.github/workflows/: build.yml
electron/: package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: e2e.rs
src-tauri/icons/: icon.icns
src-tauri/src/: crawler.rs  lib.rs  main.rs  server.rs  state.rs
