[package]
name = "coleoptera"
version = "1.0.0"
description = "Crawl a URL and convert the rendered page to clean Markdown"
authors = ["Coleoptera"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "coleoptera_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
html2md = "0.2"
scraper = "0.20"
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "brotli", "deflate", "stream", "json"] }
tokio-stream = "0.1"
futures = "0.3"
url = "2"
libc = "0.2"
